# t3kan

./: .gitignore  README.md  pyproject.toml
t3kan/: __init__.py
t3kan/config/dataset/: default.yaml
t3kan/config/model/: t3kan.yaml  t3mlp.yaml  train.yaml
t3kan/data/: dataset.py
t3kan/models/: __init__.py  _components.py  _types.py  transformer.py  ttt.py
t3kan/scripts/: seq_dataset.py  train.py
t3kan/training/: __init__.py  callbacks.py  trainer.py
t3kan/utils/: __init__.py  app_logger.py  types.py
